# MCP-retrieval-system-for-Coding-Agent

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
app/: mcp.py  rag_engine_simple.py
app/.codex/: config.toml
app/api/: routes.py
app/core/: rag_engine.py
app/retrieval/: retriever.py
data/processed/vectorstore/simple_rag/: chroma.sqlite3
data/raw/pypi_packages/: beautifulsoup4_meta.json  lightgbm_meta.json  matplotlib_meta.json  mlflow_meta.json  numpy_meta.json  opencv-python_meta.json  opencv-python_readme.md  optuna_meta.json  pandas_meta.json  scikit-image_meta.json  scikit-learn_meta.json  scipy_meta.json  sklearn-pandas_meta.json  spacy_meta.json  tensorflow_meta.json  tensorflow_readme.md  torch_meta.json  xgboost_meta.json
evaluation_results/evaluation_results/: llm_prompt_comparison.csv  retrieval_detailed.csv  retrieval_engine_by_category.csv  retrieval_engine_detailed.csv  retrieval_engine_summary.csv  retrieval_hit_mrr_detailed.csv  retrieval_hit_mrr_summary.csv
evaluation_results/evaluation_results/evaluation_results/: llm_model_comparison.csv  llm_temperature_comparison.csv  retrieval_comparison.csv  retrieval_engine_by_category.csv  retrieval_engine_detailed.csv  retrieval_engine_summary.csv  retrieval_hit_mrr_by_category.csv
prometheus/: prometheus.yml
